--- a/blogpost.html
+++ b/blogpost.html
@@ -1,11 +1,14 @@
 <html>
     <head>
         <title>EL titulo del post</title>
-        <link rel="stylesheet" href="css/estilos.css">
+        <link rel="stylesheet" href="css/estiloos.css">
          
     </head>
     <body>
         <div id ="container">
+            <div id = "cabecera">
+                Cebecera
+            </div>
             <div id = "post">
         <h1>Este es el titulo atractivo e interesante del post</h1>
         <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increibles con las ramas</p>
