--- a/blogpost.html
+++ b/blogpost.html
@@ -1,14 +1,22 @@
 <html>
     <head>
         <title>EL titulo del post</title>
-        <link rel="stylesheet" href="css/estilos.css">
+        <link rel="stylesheet" href="css/estiloos.css">
          
     </head>
     <body>
         <div id ="container">
             <div id = "post">
         <h1>Este es el titulo atractivo e interesante del post</h1>
-        <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increibles con las ramas</p>
+        <p>
+            Y este parrafo de inico donde vamos a explicar las cosas
+            increiblres que se puedene hacer con ramas
+        </p>
+        <p>
+            Los blogs son la mejor forma de compartir informacion y tus ideas.
+            Mucho mas que ir a conferencias o salir en youtube. Exepro si eres
+            un rockstar. pero estadisticamente no lo eres... por ahora.
+        </p>
         </div>
     </div>
     </body>
