una version nueva

--- a/blogpost.html
+++ b/blogpost.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Bienvenido a hyperlog</title>
+        <title>Bienvenido a hyperlog 2.0</title>
         <link rel="stylesheet" href="css/estiloos.css">
          
     </head>
